//
// Copyright (c) 2000-2018 TeamDev. All rights reserved.
// TeamDev PROPRIETARY and CONFIDENTIAL.
// Use is subject to license terms.
//

syntax = "proto3";

package spine.users.c.user;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.users.user";
option java_outer_classname = "ValuesProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "google/protobuf/any.proto";

// An intrinsic attribute of the user.
//
// Adding attributes is the way to extend `User` to meet the specific needs of the application.
//
// For example, the following pieces of information make good attributes:
//
// * { name: "auth_token", value: "e36#abcdef123" }
// * { name: "token_expiration_time", value: "1528092796" }
// * { name: "SSN", value: Any(ssn_object) }
//
message UserAttribute {

    // The name of the attribute.
    string name = 1 [(required) = true];

    // The value of the attribute packed to `Any`.
    google.protobuf.Any value = 2 [(required) = true];
}
